--- a/login.html
+++ b/login.html
@@ -4,18 +4,28 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>E-Commerce | Login</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rethink+Sans:wght@400;500;600;700;800&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/style.css" />
     <link rel="stylesheet" href="./css/login.css" />
   </head>
   <body>
     <header>
-        <a href="./index.html">Shopping Cart</a>
-        <nav>
+      <div class="container">
+        <div class="header-content">
+          <a href="./index.html" class="logo">Shopping Cart</a>
+          <nav>
             <ul>
-                <li><a href="login.html">Login</a></li>
-                <li><a href="register.html">Rigister</a></li>
+              <li><a href="login.html">Login</a></li>
+              <li><a href="register.html">Rigister</a></li>
             </ul>
-        </nav>
+          </nav>
+        </div>
+      </div>
     </header>
   </body>
 </html>
