add login-register form

--- a/login.html
+++ b/login.html
@@ -27,5 +27,14 @@
         </div>
       </div>
     </header>
+
+    <section class="section-form">
+      <h2>Login User</h2>
+      <form>
+        <input type="text" placeholder="Enter UserName.." />
+        <input type="password" placeholder="Enter Password.." />
+        <input type="submit" value="Sign In" />
+      </form>
+    </section>
   </body>
 </html>
