--- a/register.html
+++ b/register.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce | Login</title>
+    <title>E-Commerce | Register</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -27,5 +27,14 @@
         </div>
       </div>
     </header>
+    <section class="section-form">
+      <h2>Register User</h2>
+      <form>
+        <input type="text" placeholder="Enter UserName.." />
+        <input type="email" placeholder="Enter Email.." />
+        <input type="password" placeholder="Enter Password.." />
+        <input type="submit" value="Sign up" />
+      </form>
+    </section>
   </body>
 </html>
