add register script

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce</title>
+    <title>E-Commerce | Home</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -12,5 +12,25 @@
     />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <div class="container">
+        <div class="header-content">
+          <a href="./index.html" class="logo">Shopping Cart</a>
+          <nav>
+            <ul id="links">
+              <li><a href="login.html">Login</a></li>
+              <li><a href="register.html">Rigister</a></li>
+            </ul>
+            <ul id="userInfo">
+              <li><a href="#" id="user"></a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
+    </header>
+
+    <section class="section-form">Home page</section>
+    <script src="./js/script.js"></script>
+  </body>
 </html>
