add login script

--- a/login.html
+++ b/login.html
@@ -31,10 +31,11 @@
     <section class="section-form">
       <h2>Login User</h2>
       <form>
-        <input type="text" placeholder="Enter UserName.." />
-        <input type="password" placeholder="Enter Password.." />
-        <input type="submit" value="Sign In" />
+        <input type="text" placeholder="Enter UserName.." id="username" />
+        <input type="password" placeholder="Enter Password.." id="password" />
+        <input type="submit" value="Sign In" id="signIn"/>
       </form>
     </section>
+    <script src="./js/login.js"></script>
   </body>
 </html>
