--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             </ul>
             <ul id="userInfo">
               <li><a href="#" id="user"></a></li>
+              <li><a href="#" id="logOut">Log Out</a></li>
             </ul>
           </nav>
         </div>
