--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
       href="https://fonts.googleapis.com/css2?family=Rethink+Sans:wght@400;500;600;700;800&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    />
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
+    <!-- <i class="fa-solid fa-cart-shopping"></i> -->
     <header>
       <div class="container">
         <div class="header-content">
@@ -31,7 +36,26 @@
       </div>
     </header>
 
-    <section class="section-form">Home page</section>
+    <section class="home">
+      <div class="container">
+        <div class="products">
+          <div class="product-item">
+            <img src="./images/4.jpg" class="product-img" alt="image" />
+            <div class="product-desc">
+              <h2>laptop</h2>
+              <p>
+                Lorem, ipsum dolor sit amet consectetur
+              </p>
+              <span>size: large</span>
+            </div>
+            <div class="product-actions">
+              <button class="add-to-cart">Add To Cart</button>
+              <i class="fa-regular fa-heart favorite"></i>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <script src="./js/script.js"></script>
   </body>
 </html>
