check user login to add to card

--- a/register.html
+++ b/register.html
@@ -34,6 +34,7 @@
         <input type="email" placeholder="Enter Email.." id="email" />
         <input type="password" placeholder="Enter Password.." id="password" />
         <input type="submit" value="Sign up" id="signUp" />
+        <span>Have Account? <a href="./login.html">Sign In</a></span>
       </form>
     </section>
     <script src="./js/register.js"></script>
