--- a/card.html
+++ b/card.html
@@ -28,10 +28,6 @@
             </ul>
             <ul id="userInfo">
               <li><a href="#" id="user"></a></li>
-              <li>
-                <i class="fa-solid fa-cart-shopping"></i>
-                <span class="badge">1</span>
-              </li>
               <li><a href="#" id="logOut">Log Out</a></li>
             </ul>
           </nav>
@@ -40,9 +36,7 @@
     </header>
 
     <section class="home">
-      <div class="container">
-        <div class="products"></div>
-      </div>
+        cards products
     </section>
     <script src="./js/script.js"></script>
   </body>
