--- a/login.html
+++ b/login.html
@@ -34,6 +34,7 @@
         <input type="text" placeholder="Enter UserName.." id="username" />
         <input type="password" placeholder="Enter Password.." id="password" />
         <input type="submit" value="Sign In" id="signIn"/>
+        <span>Not have Account? <a href="./register.html">Sign Up</a></span>
       </form>
     </section>
     <script src="./js/login.js"></script>
