--- a/index.html
+++ b/index.html
@@ -28,9 +28,13 @@
             </ul>
             <ul id="userInfo">
               <li><a href="#" id="user"></a></li>
-              <li>
+              <li class="shopping-card">
                 <i class="fa-solid fa-cart-shopping"></i>
-                <span class="badge">1</span>
+                <span class="badge"></span>
+                <div class="card-products">
+                  <div></div>
+                  <a href="./card.html">View all products</a>
+                </div>
               </li>
               <li><a href="#" id="logOut">Log Out</a></li>
             </ul>
