solve naming err

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             </ul>
             <ul id="userInfo">
               <li><a href="#" id="user"></a></li>
-              <li class="shopping-card">
+              <li class="fa-shopping-cart">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <span class="badge"></span>
-                <div class="card-products">
+                <div class="cart-products">
                   <div></div>
-                  <a href="./card.html">View all products</a>
+                  <a href="./cart.html">View all products</a>
                 </div>
               </li>
               <li><a href="#" id="logOut">Log Out</a></li>
