--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </ul>
             <ul id="userInfo">
               <li><a href="#" id="user"></a></li>
-              <li class="fa-shopping-cart">
+              <li class="shopping-cart">
                 <i class="fa-solid fa-cart-shopping"></i>
                 <span class="badge"></span>
                 <div class="cart-products">
@@ -48,6 +48,7 @@
         <div class="products"></div>
       </div>
     </section>
+    <script src="./js/user.js"></script>
     <script src="./js/script.js"></script>
   </body>
 </html>
