--- a/cart.html
+++ b/cart.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>E-Commerce | | Cart Page</title>
+    <title>E-Commerce | Cart Page</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -49,6 +49,7 @@
       </div>
     </section>
     <script src="./js/user.js"></script>
+    <script src="./js/data.js"></script>
     <script src="./js/cart.js"></script>
   </body>
 </html>
